# maihem-poc

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf
.github/workflows/: maihem-app-AutoDeployTrigger-930c8fff-d1d9-4808-bdf5-4b25ff7ce66c.yml  main_maihem-test-katya.yml
.upsun/: config.yaml
backend/: .env.example  Dockerfile  app.py  env  makefile  pyproject.toml  requirements.txt
backend/src/maihem/: app.py  pyproject.toml
backend/src/maihem/templates/: upload.html
backend/templates/: testing_suite.html  upload.html
worker/: Dockerfile
