[tool.poetry]
name = "maihem"
version = "0.1.0"
description = ""
authors = ["Katya"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.3"
Werkzeug = "3.0.3"
Jinja2 = "3.1.4"
zipp = "3.19.2"
click = "8.1.7"
MarkupSafe = "2.1.5"
itsdangerous = "2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
